# kalshi-scripts

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
market_maker/: __init__.py
market_maker/classes/: credentials.py  environment.py  kalshi_client.py  maker_client.py  market_maker.py  order.py  profiles.py
market_maker/config/: base.py
market_maker/utils/: credentials.py
